# react-native-watchos

./: .gitignore  Info.plist  LICENSE  README.md  RNWatchConnectivity.podspec  ReactNativeWatchOS.podspec  ReactNativeWatchOSCxx.podspec  eslint.config.mjs  lefthook.yml  metro-config.d.ts  metro-config.js  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  react-native-watchos.podspec  react-native.config.js  tsconfig.json
.github/ISSUE_TEMPLATE/: config.yml
.github/actions/setup/: action.yml
.github/workflows/: ci.yml  docs.yml
apple/: Package.swift
apple/Sources/ReactNativeWatchOS/: EventBus.swift  RNWRootView.swift  ReactNativeWatchOS.swift  ReactNativeWatchOSView.swift
apple/Sources/ReactNativeWatchOS/DevSupport/: ErrorToast.swift  ShakeDetector.swift
apple/Sources/ReactNativeWatchOS/Modifiers/: AccessibilityAction.swift  AccessibilityActions.swift  AccessibilityAddTraits.swift  AccessibilityElement.swift  AccessibilityHidden.swift  AccessibilityHint.swift  AccessibilityIdentifier.swift  AccessibilityLabel.swift  AccessibilityRemoveTraits.swift  AccessibilityValue.swift  Alert.swift  AlignmentGuide.swift  AllowsHitTesting.swift  AllowsTightening.swift  Animation.swift  Antialiased.swift  AspectRatio.swift  AutocorrectionDisabled.swift  Background.swift  BackgroundExtensionEffect.swift  BackgroundStyle.swift  BaselineOffset.swift  BlendMode.swift  Blur.swift  Bold.swift  Border.swift  Brightness.swift  ButtonBorderShape.swift  ButtonRepeatBehavior.swift  ButtonSizing.swift  ButtonStyle.swift  ClipShape.swift  Clipped.swift  ColorInvert.swift  ColorMultiply.swift  ColorScheme.swift  CompositingGroup.swift  ConfirmationDialog.swift  ContainerBackground.swift  (+195 more)
apple/Sources/ReactNativeWatchOSCxx/: RCTBridgeCompat.mm  RCTCompatStubs.mm  RCTModuleMethod.mm  RCTParserUtils.m  RNWCallInvoker.h  RNWHermesHost.mm  RNWNativeModules.h  RNWNativeModules.mm  RNWRCTEventEmitter.mm  RNWShadowNode.mm  RNWTurboModule.mm  RNWTurboModuleRegistry.mm  RNWUIManager.h  RNWUIManager.mm  RNWWebSocket.h  RNWWebSocket.mm  RNWXHR.h  RNWXHR.mm
apple/Sources/WatchConnectivity/: RNWWatchConnectivity.h  RNWWatchConnectivity.mm
cli/: init.js
cmake/host/: CMakeLists.txt
cmake/jsi/: CMakeLists.txt
cmake/reactcommon/: CMakeLists.txt
cmake/reactcommon/jsinspector-stub/: InspectorStub.cpp
cocoapods/: autolink.rb
docs/: README.md  docusaurus.config.ts  package.json  sidebars.ts
docs/docs/: architecture.md  contributing.md  expo-plugin.md  intro.md  watch-connectivity.md
docs/docs/dx/: error-toast.md  fast-refresh.md  metro.md
docs/docs/getting-started/: customizing-the-watch-target.md  installation.md  pure-react-native.md  your-first-screen.md
docs/docs/native/: turbo-modules.md  watch-connectivity.md
docs/docs/navigation/: navigation-link.md  navigation-stack.md  sheet.md  tab-view.md
docs/docs/renderer/: controls.md  layout.md  lists.md  modifiers.md  overview.md  styling.md  text-and-images.md
docs/src/css/: custom.css
example/: App.tsx  README.md  app.json  index.watchos.tsx  metro.config.js  package.json
example/pokedex/: PokedexHomeScreen.tsx  PokemonDetailScreen.tsx  api.ts  typeColors.ts  types.ts
example/src/: App.tsx
example/src/demos/: AsyncImageDemo.tsx  DatePickerDemo.tsx  DemoGalleryScreen.tsx  FormDemo.tsx  GaugeDemo.tsx  GroupDemo.tsx  LabelDemo.tsx  LocalImageDemo.tsx  PickerDemo.tsx  SQLiteDemo.tsx  ShapesDemo.tsx  SheetDemo.tsx  StepperDemo.tsx  TextInputDemo.tsx  index.ts
example/src/specs/: NativeWatchInfo.ts
example/sweepy/: EffortIndicator.tsx  ProgressIndicator.tsx  RoomsScreen.tsx  ScheduleScreen.tsx  TasksScreen.tsx  data.ts
example/targets/watch/: ContentView.swift  Info.plist  NativeMath.mm  NativeWatchInfo.h  NativeWatchInfo.mm  index.swift  pods.rb
patches/: @op-engineering__op-sqlite@16.1.1.patch  docusaurus-plugin-llms@0.4.0.patch
plugin/: README.md
plugin/src/: index.js  withSPMPackage.js  withWatchAutolinking.js  withWatchBundleScript.js  withWatchTurboModuleCodegen.js  withWatchosMetro.js
plugin/templates/: ContentView.swift  index.watchos.tsx
scripts/: build-hermes-watchos.sh  build-xcframework.sh  extract-swiftui-catalog.mjs  patch-hermes-watchos.sh
scripts/swiftui-catalog/: catalog.json  summary.md
src/: createHostConfig.ts  createNativeView.ts  eventRegistry.ts  index.ts  polyfills.ts  reactNativeShim.ts  render.ts  resolveAssetSource.ts  setupConsole.ts  setupSelfGlobal.ts  types.ts  useEventHandler.ts  useModifiers.ts  whatwg-fetch.d.ts
src/components/: AngularGradient.tsx  AsyncImage.tsx  Button.tsx  Capsule.tsx  Circle.tsx  Color.tsx  ContentUnavailableView.tsx  DatePicker.tsx  Divider.tsx  Ellipse.tsx  EmptyView.tsx  Form.tsx  Gauge.tsx  GeometryReader.tsx  Grid.tsx  GridRow.tsx  Group.tsx  HStack.tsx  Image.tsx  Label.tsx  LabeledContent.tsx  LazyHGrid.tsx  LazyHStack.tsx  LazyVGrid.tsx  LazyVStack.tsx  LinearGradient.tsx  Link.tsx  List.tsx  NavigationLink.tsx  NavigationStack.tsx  Picker.tsx  ProgressView.tsx  RadialGradient.tsx  Rectangle.tsx  RoundedRectangle.tsx  ScrollView.tsx  ScrollViewReader.tsx  Section.tsx  SecureField.tsx  ShareLink.tsx  (+11 more)
src/devSupport/: index.ts
src/modifiers/: accessibility.ts  accessibilityAction.ts  accessibilityActions.ts  accessibilityAddTraits.ts  accessibilityElement.ts  accessibilityHidden.ts  accessibilityHint.ts  accessibilityIdentifier.ts  accessibilityLabel.ts  accessibilityRemoveTraits.ts  accessibilityValue.ts  alert.ts  alignmentGuide.ts  allowsHitTesting.ts  allowsTightening.ts  animation.ts  antialiased.ts  aspectRatio.ts  autocorrectionDisabled.ts  background.ts  backgroundExtensionEffect.ts  backgroundStyle.ts  baselineOffset.ts  blendMode.ts  blur.ts  bold.ts  border.ts  brightness.ts  buttonBorderShape.ts  buttonRepeatBehavior.ts  buttonSizing.ts  buttonStyle.ts  clipShape.ts  clipped.ts  colorInvert.ts  colorMultiply.ts  colorScheme.ts  componentStyles.ts  compositingGroup.ts  confirmationDialog.ts  (+196 more)
src/types/: GridItem.ts
src/watchConnectivity/: eventBridge.ts  index.ts  types.ts
src/watchConnectivity/specs/: NativeWatchConnectivity.ts
(+87 files in other folders)
